# Thermatix

./: .gitignore  .gitmodules  LICENSE  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: actions.ts  globals.css  layout.tsx
app/(root)/: layout.tsx  page.tsx
app/(root)/(auth-pages)/: layout.tsx
app/(root)/(auth-pages)/components/: google-sign-in.tsx
app/(root)/(auth-pages)/sign-in/: page.tsx
app/(root)/(auth-pages)/sign-up/: page.tsx
app/(root)/dashboard/: layout.tsx  page.tsx
app/(root)/dashboard/my-results/: page.tsx
app/auth/callback/: route.ts
app/protected/: layout.tsx  page.tsx
components/: application-examples.tsx  book-demo.tsx  default-layout-wrapper.tsx  exit-confirmation-modal.tsx  features.tsx  folder-name-modal.tsx  header-auth.tsx  hero.tsx  load-simulation-modal.tsx  save-simulation-modal.tsx  sidebar.tsx  storage-viewer.tsx  video-demo.tsx
components/ui/: label.tsx  textarea.tsx  toast.tsx  use-toast.ts
gui/: .gitignore  CMakeLists.txt  ThermatixMain.cpp
gui/include/: DragAndDrop.h  MenuBar.h
public/: test.html
public/wasm_app/: compile_commands.json  thermo_plot.html  thermo_plot.js
scripts/: build_wasm.bat  build_wasm.sh  quick_build_wasm.bat
utils/: get-url.ts
utils/supabase/: check-env-vars.ts  middleware.ts
